Added header block

--- a/index.html
+++ b/index.html
@@ -16,7 +16,40 @@
 
   <body>
     <div class="wrapper">
-      
+        <header class="header">
+            <div class="header__imageContainer">
+              <div class="header__BackgroundImage"></div>
+              <div class="header__container">
+                <div class="header__content">
+                  <div class="header__title">
+                    <p>The Best Online Dating Sites of 2023</p>
+                  </div>
+                  <div class="header__bottom">
+                    <svg
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 17 17"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      font-size="14"
+                      class="check-mark css-4qp2h0"
+                    >
+                      <path
+                        d="M8.625 16.25a8.125 8.125 0 100-16.25 8.125 8.125 0 000 16.25z"
+                        fill="#ffffff"
+                      ></path>
+                      <path
+                        d="M5.05 8.545l.866-1.126L8.17 9.325l3.64-4.073 1.04.953-4.594 5.027L5.05 8.545z"
+                        fill="#F5F5F5"
+                      ></path>
+                    </svg>
+                    <p>Last Updated: <span>Sep 2023</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </header>
+          
     </div>
   </body>
 </html>
