--- a/index.html
+++ b/index.html
@@ -49,7 +49,85 @@
               </div>
             </div>
           </header>
-          
+          <main>
+            <div class="main__topProducts topProducts">
+              <div class="topProducts__container">
+                <div class="topProducts__title">Our Top 3 Online Dating Sites</div>
+                <div class="topProducts__products product">
+                  <div class="product__body">
+                    <div class="product__top">
+                      <div class="product__logo">
+                        <img
+                          src="//umbrella.data.naturalint.com/production/products/uploads/photo/silversingles.20181113153755.png"
+                          alt="SilverSingles"
+                          width="30"
+                        />
+                      </div>
+                      <div class="product__title">SilverSingles</div>
+                      <div class="product__rating rating">
+                        <div class="rating__info">
+                          <div class="rating__name">excellent</div>
+                          <div class="rating__stars">
+                            <div class="stars">
+                              <svg
+                                width="80"
+                                height="16"
+                                viewBox="0 0 74.5 12.5"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="product-stars"
+                                data-testid="rating-stars"
+                              >
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M6.69066 0C6.44818 0 4.48485 3.87937 4.48485 3.87937C4.48485 3.87937 0.0831377 4.4288 0.00153029 4.71567C-0.0799941 5.00254 3.12295 7.95094 3.12295 7.95094C3.12295 7.95094 2.36937 12.2171 2.55698 12.3469C2.74406 12.4766 6.69059 10.468 6.69059 10.468C6.69059 10.468 10.6341 12.4503 10.8233 12.3423C11.0119 12.2344 10.2583 7.95094 10.2583 7.95094C10.2583 7.95094 13.4853 4.92353 13.3798 4.71567C13.2742 4.50786 8.89805 3.87937 8.89805 3.87937C8.89805 3.87937 6.93158 0 6.69063 0H6.69066Z"
+                                  fill="#FFB401"
+                                ></path>
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M21.9496 0C21.7071 0 19.7438 3.87937 19.7438 3.87937C19.7438 3.87937 15.342 4.4288 15.2604 4.71567C15.1789 5.00254 18.3819 7.95094 18.3819 7.95094C18.3819 7.95094 17.6283 12.2171 17.8159 12.3469C18.003 12.4766 21.9495 10.468 21.9495 10.468C21.9495 10.468 25.893 12.4503 26.0822 12.3423C26.2708 12.2344 25.5173 7.95094 25.5173 7.95094C25.5173 7.95094 28.7442 4.92353 28.6387 4.71567C28.5331 4.50786 24.157 3.87937 24.157 3.87937C24.157 3.87937 22.1905 0 21.9495 0H21.9496Z"
+                                  fill="#FFB401"
+                                ></path>
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M37.2099 0C36.9675 0 35.0041 3.87937 35.0041 3.87937C35.0041 3.87937 30.6024 4.4288 30.5208 4.71567C30.4393 5.00254 33.6422 7.95094 33.6422 7.95094C33.6422 7.95094 32.8887 12.2171 33.0763 12.3469C33.2633 12.4766 37.2099 10.468 37.2099 10.468C37.2099 10.468 41.1534 12.4503 41.3426 12.3423C41.5312 12.2344 40.7776 7.95094 40.7776 7.95094C40.7776 7.95094 44.0046 4.92353 43.899 4.71567C43.7935 4.50786 39.4173 3.87937 39.4173 3.87937C39.4173 3.87937 37.4509 0 37.2099 0H37.2099Z"
+                                  fill="#FFB401"
+                                ></path>
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M52.4693 0C52.2269 0 50.2635 3.87937 50.2635 3.87937C50.2635 3.87937 45.8618 4.4288 45.7802 4.71567C45.6987 5.00254 48.9016 7.95094 48.9016 7.95094C48.9016 7.95094 48.1481 12.2171 48.3357 12.3469C48.5227 12.4766 52.4693 10.468 52.4693 10.468C52.4693 10.468 56.4128 12.4503 56.602 12.3423C56.7906 12.2344 56.037 7.95094 56.037 7.95094C56.037 7.95094 59.264 4.92353 59.1584 4.71567C59.0529 4.50786 54.6767 3.87937 54.6767 3.87937C54.6767 3.87937 52.7103 0 52.4693 0H52.4693Z"
+                                  fill="#FFB401"
+                                ></path>
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M67.7283 0C67.4858 0 65.5225 3.87937 65.5225 3.87937C65.5225 3.87937 61.1207 4.4288 61.0391 4.71567C60.9576 5.00254 64.1605 7.95094 64.1605 7.95094C64.1605 7.95094 63.407 12.2171 63.5946 12.3469C63.7817 12.4766 67.7282 10.468 67.7282 10.468C67.7282 10.468 71.6717 12.4503 71.8609 12.3423C72.0495 12.2344 71.2959 7.95094 71.2959 7.95094C71.2959 7.95094 74.5229 4.92353 74.4174 4.71567C74.3118 4.50786 69.9356 3.87937 69.9356 3.87937C69.9356 3.87937 67.9692 0 67.7282 0H67.7283Z"
+                                  fill="#D5D5D5"
+                                ></path>
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M65.4849 3.87937C65.4849 3.87937 67.4482 0 67.6907 0L67.6906 10.468C67.6906 10.468 63.7441 12.4766 63.557 12.3469C63.3694 12.2171 64.1229 7.95094 64.1229 7.95094C64.1229 7.95094 60.92 5.00254 61.0015 4.71567C61.0831 4.4288 65.4849 3.87937 65.4849 3.87937Z"
+                                  fill="#FFB401"
+                                ></path>
+                              </svg>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="rating__score">
+                            <p>9.0</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="product__bottom"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </main>
     </div>
   </body>
 </html>
