Added styles for sidepanel block

--- a/index.html
+++ b/index.html
@@ -584,21 +584,27 @@
                     </div>
                     <div class="sidepanel__reviews review">
                       <a href="https://www.top10.com/dating/reviews/eharmony" class="review__body">
-                        <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/eharmony.20181113140854.png" alt="eharmony" width="24" height="24">
+                        <div class="review__img">
+                          <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/eharmony.20181113140854.png" alt="eharmony" width="24" height="24">
+                        </div>
                         <div class="review__info">
                           <p>eharmony</p>
                           <span>Read Review</span>
                         </div>
                       </a>
                       <a href="https://www.top10.com/dating/reviews/silversingles" class="review__body">
-                        <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/silversingles.20181113153755.png" alt="SilverSingles" width="24" height="24">
+                        <div class="review__img">
+                          <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/silversingles.20181113153755.png" alt="SilverSingles" width="24" height="24">
+                        </div>
                         <div class="review__info">
                           <p>SilverSingles</p>
                           <span>Read Review</span>
                         </div>
                       </a>
                       <a href="https://www.top10.com/dating/reviews/elitesingles" class="review__body">
-                        <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/EliteSingles_icon.20210325051223.20220714094638.png" alt="EliteSingles" width="24" height="24">
+                        <div class="review__img">
+                          <img src="//umbrella.data.naturalint.com/production/products/uploads/photo/EliteSingles_icon.20210325051223.20220714094638.png" alt="EliteSingles" width="24" height="24">
+                        </div>
                         <div class="review__info">
                           <p>EliteSingles</p>
                           <span>Read Review</span>
