Added HTML-structure questions__body sector

--- a/index.html
+++ b/index.html
@@ -2658,7 +2658,6 @@
                 </div>
 
                 <div class="center__questions questions">
-
                   <div class="questions__topTen">
                     <div class="questions__topTenLogo">
                       <svg
@@ -2688,10 +2687,135 @@
                         </g>
                       </svg>
                     </div>
-                    <p>We find the 10 best options, so you can make informed decisions on tons of products and services.</p>
+                    <p>
+                      We find the 10 best options, so you can make informed
+                      decisions on tons of products and services.
+                    </p>
                   </div>
 
-
+                  <section class="questions__body">
+                      <h2>
+                        Commit to the Right Dating Site: 4 Questions to Guide
+                        the Decision
+                      </h2>
+                      <h3>
+                        1 - What Type of Relationship Are You Looking For?
+                      </h3>
+                      <p>
+                        Before deciding which dating site and choosing one of
+                        the best dating apps to sign up for, consider your
+                        desired outcome. There are a lot of options besides
+                        Tinder. Whether you’re looking to meet interesting
+                        people, start dating again after a heartbreak or
+                        searching for that person to start a family with, dating
+                        sites aren’t a “one size fits all” deal.
+                      </p>
+                      <p>
+                        No matter what type of relationship you’re looking for,
+                        there’s a dating site and best dating app—or multiple
+                        sites and dating apps—to meet your needs. Compare some
+                        of the best sites to help guide your decision.
+                      </p>
+                      <h3>
+                        2 - Do You Prefer Being Matched or Searching
+                        Independently?
+                      </h3>
+                      <p>
+                        Personal preferences matter with online dating—just as
+                        they do with offline dating. Some singles want to search
+                        through profiles on dating sites like the Tinder app or
+                        prefer using a paid app with scientific algorithms to
+                        match others, while other people feel more comfortable
+                        being set up. Luckily, the world of online dating and
+                        best dating apps 2023 has answers for both.
+                      </p>
+                      <strong>Matchmaker, matchmaker, make me a match:</strong>
+                      <p>
+                        One of the major benefits of using a dating site or top
+                        dating app is the ability to filter potential matches
+                        according to the values and characteristics that matter
+                        most to you. This immediate screening saves time and
+                        energy by ruling out users who aren’t compatible.
+                      </p>
+                      <p>
+                        <a
+                          class="nilink"
+                          target="_blank"
+                          href="/v?product_id=12729&amp;url=https%3A%2F%2Ftms.eharmony.com%2Fcl%3Fm315%3Dc%26q%3DeCpbgDcIpObWv1uf7B9yvI6g%26pid%3D%5Btracking-subid%5D%26aid%3D%7Bplaceholder%7D&amp;cms_platform=xsite&amp;rank=1&amp;bi=%7B%22blrs%22%3A77362%2C%22utm_source%22%3A%22Direct%22%7D&amp;uid=EfcJKPMv4UGQQ93876g5&amp;riid=UCuTYACa994dsW6354cm&amp;tkn=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiY21zIiwidmVyc2lvbiI6MSwiaGFzaCI6InNHZnFCZEFGbGRROFZnL2Z4SzdhbDRGS2JKWT0iLCJpYXQiOjE2OTU3NTExMjgsImV4cCI6MTY5NTgzNzUyOH0.yY_T98J6GfBuYnkqy44VZKw3JsRIyhZcotL1NToMTyw&amp;comp_iid=a9d5f3fe-d70f-4757-9a27-847ae0ffe330&amp;gid=1236678510.1695650697"
+                        >eharmony</a>, for example, is best suited for daters seeking a
+                        serious relationship. While signing up is a lengthy
+                        process involving a thorough questionnaire, the result,
+                        from one of the best dating apps, is quality matches
+                        with the potential for long-term commitment.
+                      </p>
+                      <strong>The search:</strong>
+                      <p>
+                        Another benefit of online dating is the options. Dating
+                        sites bring together enormous numbers of singles, who
+                        may have otherwise never met. Using the search filters,
+                        singles can explore their options based on specific
+                        preferences.
+                      </p>
+                      <p>
+                        Elite Singles offers extensive search filters and
+                        sorting functionality. Basic filters include parameters
+                        such as age, height, and location, along with more
+                        specific fields such as similarities and favorites.
+                      </p>
+                      <h3>3 - Which Features Matter Most?</h3>
+                      <p>
+                        While dating sites all provide singles with the same
+                        essential service—a platform to meet new people and find
+                        a potential partner—each site does it in a different way
+                        from basic Tinder-like swiping to in-depth personality
+                        quizzes.
+                      </p>
+                      <p>
+                        Compare the features available on the best dating sites
+                        to choose the right one for you. Differentiating
+                        features include online chat or video chat, safety
+                        features like photo verification, and dating games.
+                        Choose a dating site that offers the features which are
+                        most important to you.
+                      </p>
+                      <p>
+                        For example, for singles on an online dating app with
+                        safety concerns, Zoosk offers a photo verification
+                        feature to ensure that users are honest.&nbsp;
+                      </p>
+                      <p>
+                        As you begin your online dating journey, explore the
+                        features available on different sites. Use the
+                        comparison chart above,
+                        <a
+                          href="/dating/reviews"
+                          rel=""
+                          target="_self"
+                          >expert reviews</a>, and
+                        <a
+                          href="/dating/top-reads"
+                          target="_self"
+                          >relevant articles</a>
+                        to guide your decision.
+                      </p>
+                      <h3>4 - How Much Will it Cost Me?</h3>
+                      <p>
+                        Many of the best dating sites offer free sign up or a
+                        free trial period, which is not the same as free Tinder
+                        use. However, to unlock all features and communication
+                        tools, you’ll need to subscribe. Consider the features,
+                        matchmaking and search capabilities, and overall quality
+                        of the sites as you compare prices. As with most things,
+                        you get what you pay for.
+                      </p>
+                      <p>
+                        We believe that joining a dating site or top dating apps
+                        is a smart investment. If you put yourself out there,
+                        you won’t need to subscribe for long. After all, it’s
+                        worth it — this is your future and happiness at stake.
+                      </p>
+                    </div>
+                  </section>
                 </div>
               </div>
 
