Added HTML-structure for categories block

--- a/index.html
+++ b/index.html
@@ -3405,6 +3405,86 @@
           </div>
         </div>
       </main>
+      <div class="footer">
+        <div class="footer__categories categories">
+          <div class="categories__container">
+            <div class="categories__body">
+              <div class="categories__header">
+                <h3>Explore more Top10.com Categories</h3>
+                <a href="https://www.top10.com/all-lists">View all shortlists</a>
+              </div>
+              <div class="categories__row">
+                <ul class="categories__list">
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/lifestyle">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/lifestyle.svg" alt="Lifestyle" title="">
+                      <span>Lifestyle</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/business">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/business.svg" alt="Business" title="">
+                      <span>Business</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/health">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/health.svg" alt="Health" title="">
+                      <span>Health</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/food">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/food.svg" alt="Food" title="">
+                      <span>Food</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/love-relationships">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/love-relationships.svg" alt="Love & Relationships" title="">
+                      <span>Love & Relationships</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="categories__row">
+                <ul class="categories__list">
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/tech">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/tech.svg" alt="Tech" title="">
+                      <span>Tech</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/entertainment">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/entertainment.svg" alt="Entertainment" title="">
+                      <span>Entertainment</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/shopping">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/shopping.svg" alt="Shopping" title="">
+                      <span>Shopping</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/home-privacy">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/home-privacy.svg" alt="Home & Privacy" title="">
+                      <span>Home & Privacy</span>
+                    </a>
+                  </li>
+                  <li class="categories__category">
+                    <a href="https://www.top10.com/family-pets">
+                      <img width="30" height="30" src="https://images.top10.com/q_auto/v1/production/next/categories-directory/icons/family-pets.svg" alt="Family & Pets" title="">
+                      <span>Family & Pets</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
